# BiocenosisProject

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/camera/: CameraController.cpp  CameraController.hpp  CameraSpawn.cpp  CameraSpawn.hpp  CursorManager.cpp  CursorManager.hpp
src/core/: constants.hpp  entity.cpp  entity.hpp  world.cpp  world.hpp
src/entities/: animal.cpp  animal.hpp  carcass.cpp  carcass.hpp  crab.cpp  crab.hpp  hunter.cpp  hunter.hpp  plant.cpp  plant.hpp  sheep.cpp  sheep.hpp  wolf.cpp  wolf.hpp
src/ui/: EcoStatsDisplay.cpp  EcoStatsDisplay.hpp  MainMenu.cpp  MainMenu.hpp
src/utils/: noise.hpp
